[workspace]
resolver = "3"
members = [ "crates/lib/glass-codegen","crates/lib/glass-parser"]

[workspace.package]
description = "Glass is a next-generation blazingly fast RPC framework powered by QUIC"
edition = "2024"
rust-version = "1.88.0"
authors = ["Lucas Morais <lucas@lmorais.dev>"]
readme = "README.md"
publish = true
repository = "https://github.com/lmorais-dev/glass"
homepage = "https://glass.lmorais.dev"
documentation = "https://glass.lmorais.dev/docs"
license = "Apache-2.0 OR MIT"
categories = ["asynchronous", "network-programming", "rust-patterns", "wasm", "web-programming"]
keywords = ["rpc", "quic", "web-transport", "idl", "api"]

[workspace.dependencies]
glass-parser = { path = "crates/lib/glass-parser" }
glass-codegen = { path = "crates/lib/glass-codegen" }

serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2", features = ["serde", "preserve_order"] }

pest = { version = "2.8.1", features = ["pretty-print"] }
pest_derive = { version = "2.8.1", features = ["grammar-extras"] }

syn = { version = "2.0.104", features = ["full"] }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }

tracing = { version = "0.1.41" }

thiserror = { version = "2.0.12" }
tempfile = { version = "3.20.0" }
