[workspace]
resolver = "3"
members = [ "crates/bin/glass-test", "crates/lib/glass-codegen","crates/lib/glass-parser", "crates/lib/glass-transport"]

[workspace.package]
description = "Glass is a next-generation blazingly fast RPC framework powered by QUIC"
edition = "2024"
rust-version = "1.88.0"
authors = ["Lucas Morais <lucas@lmorais.dev>"]
readme = "README.md"
publish = true
repository = "https://github.com/lmorais-dev/glass"
homepage = "https://glass.lmorais.dev"
documentation = "https://glass.lmorais.dev/docs"
license = "Apache-2.0 OR MIT"
categories = ["asynchronous", "network-programming", "rust-patterns", "wasm", "web-programming"]
keywords = ["rpc", "quic", "web-transport", "idl", "api"]

[workspace.dependencies]
glass-parser = { path = "crates/lib/glass-parser" }
glass-codegen = { path = "crates/lib/glass-codegen" }

pest = { version = "2.8.1", features = ["pretty-print"] }
pest_derive = { version = "2.8.1", features = ["grammar-extras"] }

syn = { version = "2.0.104" }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
prettyplease = { version = "0.2.36" }

tracing = { version = "0.1.41" }

thiserror = { version = "2.0.12" }
tempfile = { version = "3.20.0" }
