[workspace]
resolver = "3"
members = [ "crates/bin/glass-shard", "crates/bin/glass-testing", "crates/lib/glass-codegen","crates/lib/glass-parser", "crates/lib/glass-transport"]

[workspace.package]
description = "Glass is a next-generation blazingly fast RPC framework powered by QUIC"
edition = "2024"
rust-version = "1.88.0"
authors = ["Lucas Morais <lucas@lmorais.dev>"]
readme = "README.md"
publish = true
repository = "https://github.com/lmorais-dev/glass"
homepage = "https://glass.lmorais.dev"
documentation = "https://glass.lmorais.dev/docs"
license = "Apache-2.0 OR MIT"
categories = ["asynchronous", "network-programming", "rust-patterns", "wasm", "web-programming"]
keywords = ["rpc", "quic", "web-transport", "idl", "api"]

[workspace.dependencies]
glass-parser = { path = "crates/lib/glass-parser" }
glass-codegen = { path = "crates/lib/glass-codegen" }

clap = { version = "4.5.41", features = ["derive", "unicode"] }

quinn = { version = "0.11.8", features = ["rustls"] }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10", features = ["tracing", "datagram"] }
h3-webtransport = { version = "0.1.2" }
http = { version = "1.3.1" }

serde = { version = "1.0.219", features = ["derive"] }
ciborium = { version = "0.2.2" }

rustls = { version = "0.23.29", features = ["ring"] }
blake3 = { version = "1.8.2", features = ["serde", "zeroize"] }
ulid = { version = "1.2.1", features = ["serde"] }

brotli = { version = "8.0.1" }

pest = { version = "2.8.1", features = ["pretty-print"] }
pest_derive = { version = "2.8.1", features = ["grammar-extras"] }

syn = { version = "2.0.104" }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
prettyplease = { version = "0.2.36" }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "env-filter"] }

tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }

color-eyre = { version = "0.6.5" }
thiserror = { version = "2.0.12" }
tempfile = { version = "3.20.0" }
async-trait = { version = "0.1.88" }
